[package]
name = "imgui-gfx-hal"
version = "0.1.1"
authors = ["Benjamin <benjamin.fik.lee@gmail.com>", "Clemens <kollapsderwellenfunktion@gmail.com>"]
#homepaige = "https://git.chronicembetterment.org/benjamin/imgui-gfx-hal"
description = "An imgui renderer backend for gfx-hal"
readme = "README.md"
license = "Unlicense/MIT"

[dependencies]
failure = "0.1"
memoffset = "0.2"
gfx-hal = "0.2.1"
imgui = "0.1.0"

[dev-dependencies]
gfx-backend-vulkan = "0.2.3"
env_logger = "0.6"
winit = "0.19.2"
imgui-winit-support = "0.1"

